<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/t2_image"
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:contentDescription="@string/tsquaredlogo"
        app:srcCompat="@drawable/t2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="27dp" />

    <TextView
        android:id="@+id/getStarted_textView"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:text="@string/get"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/firstName_textView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/first_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/firstName_editText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lastName_textView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/last_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/lastName_editText"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email_textView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/edittext_bg"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phoneNumber_textView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/phoneNumber_editText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/edittext_bg"            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="right|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/postalCode_textView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/postal_code"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/postalCode_editText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/edittext_bg"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/requiredField_textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/indicates_a_requred_field"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="110dp" />

    <Button
        android:id="@+id/continue_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/t2_orange_dark"
        android:backgroundTint="@color/t2_orange_light"
        android:elevation="0dp"
        android:gravity="center"
        android:text="@string/continue_button"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

</LinearLayout>